# AutoLab

./: .gitignore  README.md  blueprint.md  config.yaml  main.py  pyproject.toml  requirements.txt
agent/: __init__.py  autonomous_orchestrator.py  autonomous_tools.py  data_agent.py  debug_agent.py  experiment_agent.py  leaderboard.py  metric_reasoner.py  orchestrator.py  report_generator.py  research_agent.py  schemas.py  task_parser.py
data/: README.md
docker/: Dockerfile
experiments/exp_0001/: config.json  train.py
experiments/exp_0002/: config.json  train.py
experiments/exp_0003/: config.json  train.py
prompts/: autonomous_system.txt  orchestrator_system.txt
tools/: __init__.py  file_tools.py  metric_parser.py  sandbox.py  script_templates.py  state_store.py  web_search.py
